fixing layout issues on the filters page, adding ideas to readme

--- a/src/styles.css
+++ b/src/styles.css
@@ -336,7 +336,7 @@ footer a {
     background-color: white;
     border: 1px solid white;
     border-radius: 10px;
-    padding: 0px;
+    padding: 20px;
     width: 100%;
     font-size: 16px;
     box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.4);
@@ -348,8 +348,9 @@ footer a {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    white-space: pre-wrap; /* Ensures text wraps properly */
+    white-space: pre-wrap;
     word-wrap: break-word;
+    box-sizing: border-box;
 }
 
 .filter-textbox::placeholder {
